--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "vite": "^5.4.10",
-    "vite-plugin-vue-devtools": "^7.5.4"
+    "vite-svg-loader": "^5.1.0"
   }
 }
