--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+		"deploy": "vite build && vite-plugin-gh-pages"
   },
   "dependencies": {
     "pinia": "^2.2.6",
@@ -16,6 +17,7 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "vite": "^5.4.10",
+    "vite-plugin-gh-pages": "^1.0.0",
     "vite-svg-loader": "^5.1.0"
   }
 }
