--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-		"deploy": "vite build && vite-plugin-gh-pages"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "pinia": "^2.2.6",
@@ -16,8 +16,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "gh-pages": "^6.2.0",
     "vite": "^5.4.10",
-    "vite-plugin-gh-pages": "^1.0.0",
     "vite-svg-loader": "^5.1.0"
   }
 }
